--- a/Mockup/form/ACS0010.html
+++ b/Mockup/form/ACS0010.html
@@ -186,9 +186,9 @@ label {
 <input type="text" id="78afa20161013112206207f3716c102164488fac" style="width:437px; height:40px; text-align:left;font-size:16pt;font-family:MS UI Gothic;font-style:normal;color:#000000; background-color:#FFFFFF; " tabindex="236"/>
 </div>
 <!-- 78afa201610131122062079aa26052599049a59f -->
-<div style="position:absolute;top:401px;left:2px;">
-<div style="width:473px; height:21px; overflow:hidden;"><div style="width:473px; height:21px; font-size:14.25pt;font-family:MS UI Gothic;font-style:normal;color:#000000; display: table-cell;padding-left:2px; padding-right:2px; text-align:left;vertical-align:middle;background-color:#FFFFFF; ">
-<span style="white-space:pre;">※登録後、アドレス宛にメールが届きますのでご確認ください。</span>
+<div style="position:absolute;top:404px;left:51px;">
+<div style="width:381px; height:60px; overflow:hidden;"><div style="width:381px; height:60px; font-size:14.25pt;font-family:MS UI Gothic;font-style:normal;color:#000000; display: table-cell;padding-left:2px; padding-right:2px; text-align:center;vertical-align:middle;background-color:#FFFFFF; ">
+<span style="white-space:pre;">登録後、アドレス宛にメールが届きますので<br>ご確認ください。</span>
 </div>
 </div>
 </div>
